# Python_Testing

./: .coverage  .flaskenv  .gitignore  competitions.json  pyproject.toml  server.py
templates/: booking.html  index.html  points.html  welcome.html
templates/includes/: points_table.html
tests/: test_book_place_according_competition.py  test_booking_places_past_competition.py  test_display_point.py  test_email_show_summary.py
tests/functional_tests/: test_connection_logout.py
tests/integration_tests/: test_connection_registration.py
tests/performance_tests/: locustfile.py
tests/unit_tests/: test_book_more_than_12_places.py  test_book_place_according_competition.py  test_book_place_according_point.py  test_booking_places_past_competition.py  test_display_point.py  test_email_show_summary.py  test_home_page.py  test_update_point.py
